Polishing - PR comments + groovy (which I missed somehow)